Added handler for dulication in chat web socket messaging